--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -24,3 +24,4 @@
 // @import '../../../node_modules/ngx-guided-tour/scss/guided-tour-base-theme.scss';
 @import "./pages/select-project.scss";
 @import "./pages/walkthrough.scss";
+@import "./pages/common.scss";
