--- a/src/app/shared/components/project-item/project-item.component.html
+++ b/src/app/shared/components/project-item/project-item.component.html
@@ -77,7 +77,7 @@
                   </div>
                   <div class="font-size12 p-l-15">Low Stock Material</div>
                 </div> -->
-                <div class="col-sm-4 box-custom color-text-card p-t-10 cursor-pointer display-flex"
+                <div class="col-sm-4 box-custom color-text-card p-t-10 cursor-pointer display-flex showAllMaterials"
                   (click)="navigationToBOM(projectDetails.projectId, projectDetails)" matTooltip="View All Materials">
                   <div class="font-size20 text-bold">
                     <span *ngIf="projectDetails.matCount">
@@ -91,7 +91,7 @@
                     All Materials
                   </div>
                 </div>
-                <div class="col-sm-4 box-custom color-text-card p-t-10 cursor-pointer  display-flex"
+                <div class="col-sm-4 box-custom color-text-card p-t-10 cursor-pointer  display-flex showOpenIndents"
                   (click)="redirectToOpenIndentCount(projectDetails.projectId, projectDetails)"
                   matTooltip="View All Indents">
                   <div class="font-size20 text-bold">
@@ -108,7 +108,7 @@
                   </div>
                 </div>
                 <span class="col-sm-4">
-                  <div *ngIf="permissionObj.purchaseOrderFlag" class="box-custom cursor-pointer display-flex p-t-10 "
+                  <div *ngIf="permissionObj.purchaseOrderFlag" class="box-custom cursor-pointer display-flex p-t-10 showPurchaseOrders"
                     (click)="redirectToPurchaseOrder()" matTooltip="View All Purchase Orders">
                     <div class="font-size20 color-text-card text-bold">
                       <span *ngIf="projectDetails.purchaseOrderCount">
