--- a/src/app/features/indent/indent-dashboard.component.html
+++ b/src/app/features/indent/indent-dashboard.component.html
@@ -61,7 +61,8 @@
 
             <td mat-cell *matCellDef="let element; let i = index">
               <mat-form-field [formGroupName]="i" class="border-input">
-                <input matInput formControlName="dueDate" [matDatepicker]="startDate" placeholder="Required Date" [min]="minDate" />
+                <input matInput formControlName="dueDate" [matDatepicker]="startDate" placeholder="Required Date" 
+                  [min]="minDate" (focus)="startDate.open()" readonly />
                 <!-- <span class="form-palceholder">{{ formatDate(materialForms.controls.forms.controls.dueDate.value) }}</span> -->
                 <mat-datepicker-toggle matSuffix [for]="startDate"></mat-datepicker-toggle>
                 <mat-datepicker #startDate></mat-datepicker>
