--- a/src/app/features/bom/bom.component.html
+++ b/src/app/features/bom/bom.component.html
@@ -32,7 +32,7 @@
         </div>
         <div class="col-sm-12">
           <mat-form-field class="border-select center-element">
-            <mat-label>Select Category</mat-label>
+            <mat-label *ngIf="!selectedCategory.length">Select Category</mat-label>
             <mat-select [formControl]="categories" [(ngModel)]="selectedCategory" multiple floatlLabel="never">
               <div class="display-flex">
                 <input class="p-l-10 p-b-5" matInput type="search" placeholder="Search Category Name" [(ngModel)]="searchText" />
@@ -41,7 +41,7 @@
                 </button>
               </div>
               <mat-select-trigger>
-                <mat-label>Choose an option</mat-label>
+                <mat-label>Select Category</mat-label>
               </mat-select-trigger>
               <mat-option *ngFor="let category of fullCategoryList | SearchPipe: searchText" [value]="category">{{ category.materialGroup }} </mat-option>
             </mat-select>
