--- a/src/app/features/rfq/create-rfq/rfq-project-materials/rfq-project-materials.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-project-materials/rfq-project-materials.component.html
@@ -2,7 +2,7 @@
   <div class="row p-b-10">
     <div class="col-sm-12">
       <mat-form-field class="border-select pull-right m-r-25">
-        <mat-label>Select Project</mat-label>
+        <mat-label *ngIf="!rfqDetails.length">Select Project</mat-label>
         <mat-select formControlName="selectedProject" multiple>
           <div class="display-flex">
             <input class="p-l-10 p-b-5" matInput type="search" placeholder="Search project Name" [(ngModel)]="searchText" [ngModelOptions]="{standalone: true}" />
@@ -10,6 +10,9 @@
               <mat-icon>search</mat-icon>
             </button>
           </div>
+          <mat-select-trigger>
+            <mat-label>Select Project</mat-label>
+          </mat-select-trigger>
           <mat-option *ngFor="let project of allProjects | SearchPipe: searchText:'projectName'" [value]="project" selected="project.clicked" (click)="choosenProject()"
             >{{ project.projectName }}
           </mat-option>
