--- a/src/app/features/bom/bom.component.html
+++ b/src/app/features/bom/bom.component.html
@@ -1,7 +1,7 @@
 <div class="page-start-point ">
   <div class="p-l-20 p-r-20 p-b-20 min-height">
     <card-layout *ngIf="product" (onEdit)="editProject($event)" (onDelete)="deleteProject($event)"
-      [projectDetails]="product"></card-layout>
+      [projectDetails]="product" [disableEditDelete]="true"></card-layout>
     <div class="p-t-10" *ngIf="!showTable">
       <mat-card class="parent">
         <div class="row">
@@ -10,23 +10,24 @@
           </div>
           <div class="col-xs-6 text-right d-flex justify-content-end" appDnd>
             <div class="mr-3">
-              <span>
+              <span class="cursor-pointer">
                 <img src="assets/images/download.png" alt="download" class="img-fluid mr-2">
                 <a (click)="downloadExcel('assets/images/Master_data.xlsx')"> Download BOM Template</a></span>
             </div>
             <div>
-              <input type="file" accept=".xlsx" #fileDropRef id="fileDropRef" class="fileupload" multiple
+              <input class="fileupload cursor-pointer width-200"  type="file" accept=".xlsx" #fileDropRef id="fileDropRef" multiple
                 (change)="uploadExcel($event.target.files)" />
-              <span> <img src="assets/images/upload.png" alt="upload" class="img-fluid mr-2 w-30"> Upload BOM
-                Template</span>
+              <span class="cursor-pointer"> <img src="assets/images/upload.png" alt="upload" class="img-fluid mr-2 w-30"> 
+             <span class="cursor-pointer">Upload BOM Template</span> 
+              </span>
             </div>
           </div>
         </div>
         <div class="row display-flex m-b-20">
           <div class="m-b-10 m-r-10" *ngFor="let category of selectedCategory">
-            <mat-card class="p-10">{{ category.materialGroup }}
+            <mat-card class="p-l-10 p-r-0 p-t-0 p-b-0 font-size14">{{ category.materialGroup }}
               <button mat-button matSuffix mat-icon-button>
-                <mat-icon class="font-size18" (click)="clearSelectedCategory(category)">clear</mat-icon>
+                <mat-icon class="font-size14" (click)="clearSelectedCategory(category)">clear</mat-icon>
               </button>
             </mat-card>
           </div>
