--- a/src/app/features/global-store/global-store.component.html
+++ b/src/app/features/global-store/global-store.component.html
@@ -1,6 +1,24 @@
 <div class="page-start-point ">
-  <div class="p-l-20 p-r-20 p-b-20 min-height">
-    <div class="row">
+  <div class="p-l-20 p-r-20 p-b-20 min-height" >
+     <ng-container *ngIf="materialDataLength == 0 && projectWiseData==0">
+       <div class=" wrapper-btn-center">
+          <div class="add-user-img">
+                <img src="../../../../assets/images/global-store.png" alt="BuildSupply_Logo">
+                  <div>
+                        <p>
+                          You haven't created any project yet. <br>
+                          Please create one to continue.
+                        </p>
+                  </div>
+                        <!-- <button  mat-raised-button  (click)="addUser()" class="main-background-color main-button color-white">
+                      Add First User
+                    </button> -->
+              </div>
+         </div> 
+      </ng-container>
+    
+    <ng-container>
+    <div class="row"  *ngIf="materialDataLength > 0 || projectDataLength>0">
       <div class="col-xs-6">
         <a href="javascript:void(0)" (click)="setButtonName('materialWise')">
           <button [class.active]="buttonName == 'materialWise'" class="color-black" mat-button>
@@ -43,11 +61,17 @@
       </div>
     </mat-card> -->
 
-    <div *ngIf="buttonName === 'materialWise'; else elseBlock">
-      <app-material-wise [materialData]="globalStoreData"></app-material-wise>
+    <div *ngIf="(buttonName === 'materialWise') ; else elseBlock">
+      <app-material-wise (materialDataLength)="materialShowDataLength($event)" [materialData]="globalStoreData"></app-material-wise>
     </div>
     <ng-template #elseBlock>
-      <app-project-wise *ngIf="projectWiseData.length" [projectData]="projectWiseData"></app-project-wise>
+      <app-project-wise *ngIf="projectWiseData.length" (projectDataLength)="projectShowDataLength($event)" [projectData]="projectWiseData"></app-project-wise>
     </ng-template>
+
+     </ng-container>
+
+
   </div>
+
+ 
 </div>
