--- a/src/app/features/supplier/supplier-details/supplier-details.component.html
+++ b/src/app/features/supplier/supplier-details/supplier-details.component.html
@@ -44,11 +44,11 @@
         <div class="text-right add-user-details-button-right p-t-10 p-r-20">
           <div class="text-right d-flex justify-content-end" appDnd>
             <div class="mr-3 p-t-10">
-              <span>
+              <span  class="cursor-pointer">
                 <img src="assets/images/download.png" alt="download" class="img-fluid mr-2">
                 <a (click)="downloadExcel('assets/images/Supplier_Upload_Template.xlsx')"> Download Supplier Template</a></span>
             </div>
-            <div  class="mr-3 p-t-10">
+            <div  class="mr-3 p-t-10 cursor-pointer">
               <input type="file" accept=".xlsx" #fileDropRef id="fileDropRef" class="fileupload" multiple
                 (change)="uploadExcel($event.target.files)" />
               <span> <img src="assets/images/upload.png" alt="upload" class="img-fluid mr-2 w-30"> Upload Supplier Template</span>
