--- a/src/app/shared/dialogs/issue-to-indent/issue-to-indent-dialog.html
+++ b/src/app/shared/dialogs/issue-to-indent/issue-to-indent-dialog.html
@@ -13,7 +13,13 @@
        <div class="col-xs-4 mid-head-top">
           <span>
            Available in Stock: 
-           {{ issueToIndentDetails.availableStock}} {{issueToIndentDetails.materialUnit}}
+           <span *ngIf="issueToIndentDetails.availableStock>0">
+             {{issueToIndentDetails.availableStock}}
+           </span> 
+           <span *ngIf="issueToIndentDetails.availableStock == null">
+            0
+           </span> 
+           {{issueToIndentDetails.materialUnit}}
         </span>
        </div>
        <div class="col-xs-2">
