--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -413,7 +413,7 @@ mat-accordion {
   border-radius: 20px;
 }
 .cursor-pointer {
-  cursor: pointer;
+  cursor: pointer !important;
 }
 
 .width-100 {
