--- a/src/app/shared/components/project-item/project-item.component.html
+++ b/src/app/shared/components/project-item/project-item.component.html
@@ -118,10 +118,7 @@
                     </span>
                   </div>
                   <div class="font-size12 color-text-card p-l-15 p-t-5">
-                    Purchase Orders <br>
-                    <span class="font-size14 purchase-amount" *ngIf="projectDetails.purchaseOrderCost">
-                      ₹{{ projectDetails.purchaseOrderCost  | number : '1.2-2' }} Cr
-                    </span>
+                   Open Indents
                   </div>
                 </div>
                 <span class="col-sm-4">
