--- a/src/app/shared/dialogs/select-po-role/selectPoRole.html
+++ b/src/app/shared/dialogs/select-po-role/selectPoRole.html
@@ -13,7 +13,7 @@
   </div>
 
   <div class="row">
-    <table mat-table [dataSource]="approverData" class="mat-elevation-z8 col-sm-12">
+    <table mat-table [dataSource]="approverData" class="col-sm-12 approver-tbl">
       <ng-container matColumnDef="User Name">
         <th mat-header-cell *matHeaderCellDef>User</th>
         <td mat-cell *matCellDef=" let element;let i=index">
