--- a/src/app/features/po/initiate-po/po-quantity-makes/po-quantity-makes.component.html
+++ b/src/app/features/po/initiate-po/po-quantity-makes/po-quantity-makes.component.html
@@ -1,6 +1,9 @@
 <form *ngIf="checkedMaterialsList" [formGroup]="materialForms">
   <div class="row ">
     <div class="col-xs-12 text-right p-b-10">
+      <span class="p-r-5">
+        <button mat-raised-button matStepperPrevious class="main-background-color main-button color-white" (click)="materialAdded()" type="button">Back</button>
+      </span>
       <span>
         <button mat-raised-button [disabled]="!materialForms.valid" matStepperNext (click)="materialAdded()" class="main-background-color main-button color-white">
           Next
