--- a/src/app/features/rfq/create-rfq/create-rfq.component.html
+++ b/src/app/features/rfq/create-rfq/create-rfq.component.html
@@ -2,10 +2,10 @@
   <div class="p-l-20 p-r-20 p-b-20 min-height parent">
     <div class="row">
       <div class="col-xs-12 text-right p-b-10 p-t-5">
-        <span class="p-r-5">
+        <!-- <span class="p-r-5">
           <button mat-raised-button class="main-background-color main-button color-white" (click)="goBack(stepper)" type="button">Back</button>
-        </span>
-        <span *ngIf="currentIndex != 2">
+        </span> -->
+        <!-- <span *ngIf="currentIndex != 2">
           <button
             mat-raised-button
             class="main-background-color main-button color-white"
@@ -28,21 +28,22 @@
           >
             Next
           </button>
-        </span>
+        </span> -->
       </div>
     </div>
-    <mat-horizontal-stepper (selectionChange)="selectionChange($event)" #stepper>
+    <!-- <mat-horizontal-stepper (selectionChange)="selectionChange($event)" #stepper> -->
+    <mat-horizontal-stepper #stepper>
       <mat-step stepControl="stepOne">
         <ng-template matStepLabel>Project & Material</ng-template>
         <app-rfq-project-materials (updatedRfq)="getMaterial($event)" #projectrMaterial [existingRfq]="rfqData"> </app-rfq-project-materials>
       </mat-step>
       <mat-step stepControl="stepSecond">
         <ng-template matStepLabel>Add Quantity & Makes</ng-template>
-        <app-rfq-quantity-makes #rfqQtyMakes [rfq]="rfqMaterial" (updatedRfq)="getQuantityAndMakes($event)"> </app-rfq-quantity-makes>
+        <app-rfq-quantity-makes #rfqQtyMakes [generatedRfq]="rfqMaterial" (updatedRfq)="getQuantityAndMakes($event)"> </app-rfq-quantity-makes>
       </mat-step>
       <mat-step stepControl="stepThree">
         <ng-template matStepLabel>Select Supplier</ng-template>
-        <app-rfq-supplier #rfqSupplier [finalRfq]="finalRfq"> </app-rfq-supplier>
+        <app-rfq-supplier #rfqSupplier [finalRfq]="finalRfq" (updatedRfq)="getSupplierData($event)"> </app-rfq-supplier>
       </mat-step>
     </mat-horizontal-stepper>
   </div>
