--- a/src/app/features/rfq/ref-detail/ref-detail.component.html
+++ b/src/app/features/rfq/ref-detail/ref-detail.component.html
@@ -57,7 +57,7 @@
       </div>
       <div class="col-xs-9">
         <div class="text-right add-user-details-button-right p-t-10 p-r-20">
-          <button mat-raised-button class="main-background-color main-button color-white m-b-5" [routerLink]="['../../rfq/createRfq']">
+          <button mat-raised-button class="main-background-color main-button color-white m-b-5" (click)="createRfq()">
             Create RFQ
           </button>
         </div>
